# hw2_10_django

./: pyproject.toml
